# co-pymol

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  start_headless.py
.github/workflows/: ci.yml
pymol_claude/: __init__.py  mcp_server.py  metrics.py  triage.py
src/co_pymol/: __init__.py  __main__.py  cli.py  constants.py  instructions.md  proxy.py  server.py
src/co_pymol/core/: metrics.py  session.py  triage.py  triage_view.py
src/co_pymol/tools/: metrics.py  render.py  run.py  triage.py
src/co_pymol/utils/: jsonrpc.py
src/co_pymol/utils/pymol/: render.py
src/pylot/: __init__.py  cli.py  config.py  instructions.md  instructions.py  server.py
src/pylot/core/: metrics.py  session.py  triage.py  triage_view.py
src/pylot/tools/: errors.py  metrics.py  render.py  run.py  triage.py
src/pylot/utils/: pymol_helpers.py
src/pylot/utils/pymol/: helper.py  render.py
src/pymol_claude/: __init__.py  cli.py  server.py
src/pymol_claude/tools/: metrics.py  render.py  run.py  triage.py
src/pymol_claude/utils/: pymol_helpers.py
tests/: test_metrics.py  test_pipeline.py  test_proxy.py
tests/fixtures/af2/: prediction_pae.json
tests/fixtures/af3/: run_full_data_0.json  run_model_0.cif
tests/fixtures/complex/: dimer.cif
