[project]
name = "co-pymol"
version = "0.1.1"
description = "PyMOL plugin that exposes PyMOL as MCP tools for Claude Code and Claude mobile"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp~=1.27.1",
    "anyio>=4.0",
    "numpy>=1.24",
    "gemmi>=0.6",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest>=8.0",
    "ruff",
]

[project.scripts]
co-pymol = "co_pymol.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.hatch.build.targets.wheel]
packages = ["src/co_pymol"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
